--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 
+layoutxlm-base/
+microsoft-layoutlmv2-base-uncased/
+
+
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,pycharm+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,pycharm+all
 
