--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 layoutxlm-base/
 microsoft-layoutlmv2-base-uncased/
 gartner-data/
-
+examples/XFUND-DATA-Gartner/
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,pycharm+all
